# waysettings

./: Cargo.toml
i18n/en/: waysettings.ftl
src/: main.rs
